# clinic-crud-api

./: .env-example  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/src/: config.py  constants.py  database.py  dependencies.py  helpers.py  main.py  models.py  routers.py  schemas.py  security.py
backend/src/controllers/: __init__.py  crud_appointment.py  crud_patient.py  crud_provider.py  crud_users.py
frontend/: Dockerfile  Login.py  api_functions.py  config.py  requirements.txt
frontend/pages/: Pacientes.py
